--- a/Addmision/addmision.html
+++ b/Addmision/addmision.html
@@ -15,7 +15,7 @@
                 <img class="logo-img" src="../Assest/rnlogo.png" alt="">
                 <p class="name">R.N PUBLIC SCHOOL</p>
                 <ul class="navigation">
-                    <li><a href="./Home.html">Home</a></li>
+                    <li><a href="../index.html">Home</a></li>
                     <li><a href="./About/about.html">About</a></li>
                     <li><a href="./Gallery/gallery.html">Gallery</a></li>
                     <li><a href="./Addmision/addmision.html">Admisions</a></li>
