--- a/About/about.html
+++ b/About/about.html
@@ -16,12 +16,17 @@
             <div class="container">
                 <img class="logo-img" src="../Assest/rnlogo.png" alt="">
                 <p class="name">R.N PUBLIC SCHOOL</p>
+                <input type="checkbox" id="click">
+                <label for="click" class="menu-tbn">
+                    <i class="fa fa-bars" aria-hidden="true"></i>
+
+                </label>
                 <ul class="navigation">
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="../About/about.html">About</a></li>
-                    <li><a href="../Gallery/gallery.html">Gallery</a></li>
-                    <li><a href="../Addmision/addmision.html">Admisions</a></li>
-                    <li><a href="../Contact/contact.html">Contact Us</a></li>
+                    <li class="nav-ul"><a href="../index.html">Home</a></li>
+                    <li class="nav-ul"><a href="../About/about.html">About</a></li>
+                    <li class="nav-ul"><a href="../Gallery/gallery.html">Gallery</a></li>
+                    <li class="nav-ul"><a href="../Addmision/addmision.html">Admisions</a></li>
+                    <li class="nav-ul"><a href="../Contact/contact.html">Contact Us</a></li>
                 </ul>
 
             </div>
